@@ -1,2 +1,3 @@
+INFO: Schema validation passes
 ERROR: Skipping ABNF checking because
   Additional ABNF rule file 'abnf-extras.abnf' does not exist
