@@ -1,2 +1,3 @@
+INFO: Schema validation passes
 ERROR: Skipping spell checking because
   The program 'no-spell' does not exist or is not executable
