@@ -1,3 +1,4 @@
+INFO: Schema validation passes
 Tests/spell.xml:4: Misspelled word 'THis' in attribute 'ascii'
   THis is also the title
 Tests/spell.xml:4: Misspelled word 'TITLe' in attribute 'abbrev'
