@@ -1,1 +1,1 @@
-0.5.10
+0.5.11
