@@ -1,4 +1,4 @@
 # Static values
-__version__  = '0.5.10'
+__version__  = '0.5.11'
 NAME         = 'rfctools_common'
 VERSION      = [ int(i) if i.isdigit() else i for i in __version__.split('.') ]
